# prompt-eval-toolkit

./: README.md  pyproject.toml
data/: invoices.yml
prompt_eval/: cli.py  runner.py  stats.py
prompt_eval/metrics/: __init__.py  contains.py  exact_match.py
prompts/: extractor_v1.txt  extractor_v2.txt
